<resources>
    <string name="app_name">BookDB</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="operating_system">Operating System</string>
    <string name="peter_baer_galvin">Peter Baer Galvin</string>
    <string name="add_book_info">Add Book Info</string>
    <string name="name">Name</string>
    <string name="required_field">required</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="author">Author</string>
</resources>
