<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCoverPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/oscover"
            android:contentDescription="@string/thumbnail"
            android:padding="2.5dp"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/tvBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivCoverPage"
            android:text="@string/operating_system"
            android:lineSpacingExtra="0dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBookName"
            android:text="@string/peter_baer_galvin"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>